# marty

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Marty.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: rust.yml
docs/: README.md
src/: cli.rs  config.rs  error.rs  http.rs  main.rs  marty.rs  memory.rs  metrics.rs  model.rs  outputs.rs  scheduler.rs  signals.rs  tui.rs
tests/: cli.rs
