[package]
name = "marty"
version = "0.1.0"
edition = "2021"
authors = ["Rory Spring <rory.spring@icloud.com>"]
license = "MIT"


[build-dependencies]
clap = { version = "4.2", features = ["derive"] }
clap_mangen = "0.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
futures = "0.3"
clap = { version = "4.2", features = ["derive"] }
dirs = "5.0"
emoji = "0.2.1"
colored = "2.0"
regex = "1.12.2"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
lazy_static = "1.4.0"
prometheus = { version = "0.13", features = ["process"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.4"





